pillager rerefix, tab cycling fix